--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "",
-  "short_name": "",
+  "name": "Hello Dave",
+  "short_name": "hello",
   "lang": "en-US",
   "start_url": "/",
   "icons":[
